# sebi-vidyalaya-radiant-ranger

./: .env.example  .gitignore  Dockerfile  README.md  agents.py  app.py  configs.py  custom_tools.py  embeddings.py  llm_models.py  models.py  orchestrator.py  pyproject.toml  replit.md  requirements.txt  routes.py  speech_service.py  translator.py
attached_assets/: Pasted-Enhanced-Chat-Interface-Design-Chat-Container--1756555851423_1756555851433.txt
data/: ('NISM SERIES V-B MFF Workbook 2025 May 2025', '.pdf')_pages.json  ('NISM Series X-A-Investment Adviser Level 1 - June 2025 version', '.pdf')_pages.json  ('SEBI-Investor-Awareness-Test-FAQ', '.pdf')_pages_embed.json  ('SEBI_-_Investor_Certification_Examination_-_Financial_Education_Booklet_30092024170623', '.pdf')_pages_embed.json  ('SEBI_-_Investor_Certification_Examination_-_Securities_Market_Booklet_30092024170647', '.pdf')_pages_embed.json  ('Workshop', '.pdf')_pages_embed.json  ('reading-mat-eng', '.pdf')_pages_embed.json  Investment Adviser (Level 1).txt  Mutual Fund Foundation Certification Examination.txt  invest_advisor_test_questions.json  investor_awareness_test_questions.json  mf_foundation_test_questions.json  sebi_investor_awareness_exam_overview.txt
static/css/: style.css
static/js/: main.js  speech.js
templates/: base.html  chat.html  landing.html
uploads/: .gitkeep
