[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "flask-socketio>=5.5.1",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "google-auth>=2.40.3",
    "google-cloud-speech>=2.33.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "sift-stack-py>=0.8.4",
    "werkzeug>=3.1.3",
    "flask-login>=0.6.3",
    "sqlalchemy>=2.0.43",
]
