[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "google-auth>=2.40.3",
    "google-cloud-speech>=2.33.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2",
    "sse-starlette>=1.6.5",
    "werkzeug>=3.1.3",
]
